@@ -10,7 +10,7 @@ measuringTape = Measuring Tape
 hose = Hose
 waterTower = Water Tower
 fluidDensity = Fluid Density
-kgPerM3 = kg/m^3
+kgPerM3 = <html>kg/m<sup>3</sup></html>
 gasoline = gasoline
 water = water
 honey = honey
